--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
             <span class="studi">Studio</span>
           </a>
           <ul class="nav-list list">
-            <li class="nav-list-item"><a class="nav-link link navigation active" href="./index.html">Studio</a></li>
+            <li class="nav-list-item"><a class="nav-link link navigation" href="./index.html">Studio</a></li>
             <li class="nav-list-item"
               ><a class="nav-link link navigation active" href="./portfolio.html">Portfolio</a></li
             >
@@ -280,6 +280,20 @@
               </a>
             </li>
           </ul>
+        </div>
+        <!-- Footer subscribe section -->
+        <div class="footer-subscription">
+          <p class="footer-description social-media-link">Subscribe</p>
+          <div class="subscription-field">
+            <label class="subscription-tag" for="email">
+              <input class="subscription-email" type="email" name="" id="email" placeholder="E-mail"
+            /></label>
+            <button type="submit" class="button subscribe-btn"
+              >Subscribe<svg class="subscribe-btn-plane" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
