--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
     <!-- Footer section -->
     <footer class="footer">
       <div class="container footer-container">
+        <!-- Footer description -->
         <div class="footer-left">
           <a class="nav-logo footer-logo link" href="./index.html">
             Web
@@ -444,6 +445,7 @@
             >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p
           >
         </div>
+        <!-- Footer links -->
         <div class="social-media">
           <p class="footer-description social-media-link">Social media</p>
           <ul class="socials socials-footer list">
@@ -501,6 +503,20 @@
             </li>
           </ul>
         </div>
+        <!-- Footer subscribe section -->
+        <div class="footer-subscription">
+          <p class="footer-description social-media-link">Subscribe</p>
+          <div class="subscription-field">
+            <label class="subscription-tag" for="email">
+              <input class="subscription-email" type="email" name="" id="email" placeholder="E-mail"
+            /></label>
+            <button type="submit" class="button subscribe-btn"
+              >Subscribe<svg class="subscribe-btn-plane" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
     <!-- Modal -->
@@ -511,6 +527,46 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="footer-description modal-text">Leave your contacts and we will call you back</p>
+
+        <form name="modal_form" class="modal-form">
+          <label class="modal-form-label" for="modal_name">Name</label>
+          <div class="modal-form-wrapper">
+            <input class="modal-form-field" type="text" name="modal_name" id="modal_name" />
+            <svg class="modal-form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+          </div>
+          <label class="modal-form-label" for="modal_phone">Phone</label>
+          <div class="modal-form-wrapper">
+            <input class="modal-form-field" type="tel" name="modal_phone" id="modal_phone" />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+          <label class="modal-form-label" for="modal_email">Email</label>
+          <div class="modal-form-wrapper">
+            <input class="modal-form-field" type="email" name="modal_email" id="modal_email" />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+          <label class="modal-form-label" for="modal_comment">Comment</label>
+          <textarea
+            class="modal-comment-field"
+            name="modal_comment"
+            id="modal_comment"
+            rows="7"
+            placeholder="Text input"
+          ></textarea>
+          <label class="modal-form-agreement">
+            <input class="modal-check-input" type="checkbox" name="modal_agreement" />
+            <span class="modal-agreement-text"
+              >I accept the terms and conditions of the <a class="modal-agreement-link" href="">Privacy Policy</a></span
+            >
+          </label>
+          <button class="modal-btn button btn" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
